--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Nor Fariha Serzali</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/image.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -47,7 +47,7 @@
                         Taman Seri Telok Emas 75460 Melaka · (+60) 17-240 4693 ·
                         <a href="mailto:name@email.com">fryhsrzl@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">A passionate student pursuing in Bachelor of Software Engineering seeking the opportunity to enhance skills in leadership, debugging, and coding to meet business needs.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://my.linkedin.com/in/nor-fariha-serzali-a9baa1212"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/farihasrzli"><i class="fab fa-github"></i></a>
@@ -62,11 +62,11 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University Selangor</h3>
-                            <div class="subheading mb-3">Bachelor of Software Engineering (Hons)</div>
-                            <div>Computer Science - Web Development Track</div>
+                            <h3 class="mb-0">Universiti Selangor</h3>
+                            <div class="subheading mb-3">Bachelor of Computer Science (Hons)</div>
+                            <div>Software Engineering</div>
                             <p>GPA: 3.51</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2019 - Now</span></div>
@@ -74,11 +74,20 @@
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">University Malaysia of Computer Science & Engineering</h3>
+                            <div class="subheading mb-3">Foundation in Computing and Engineering</div>
+                            <p>CGPA : 3.01</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2017 - Mac 2018</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">SM Sains Tuanku Aishah Rohani</h3>
+                            <div class="subheading mb-3">Social Sciences</div>
+                            <p>SPM: 9As</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2015 - 2016</span></div>
                     </div>
                 </div>
             </section>
@@ -130,35 +139,35 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Founder</h3>
+                            <div class="subheading mb-3">@surprisefor__you</div>
+                            <p>Manage the business operation and strategy of owned small surprise boxes business around area Melaka through Instagram.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2020 - February 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Instructor</h3>
+                            <div class="subheading mb-3">Adobe Photoshop Workshop</div>
+                            <p>Introduce and teach the fundamental of Adobe Photoshop to the members of IT club SMK Putrajaya Presint 11(1).</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Student Welfare Committee Member</h3>
+                            <div class="subheading mb-3">Student Representative Council (SRC)</div>
+                            <p>Assisted in manage the students' wellbeing as a part of the student welfare department.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2018 - April 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Student Activities and Events Committee Member</h3>
+                            <div class="subheading mb-3">Student Representative Council (SRC)</div>
+                            <p>Assisted in manage the students' affairs and campus events as a part of the student activities and events department.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2017 - June 2018</span></div>
                     </div>
                 </div>
             </section>
@@ -180,19 +189,19 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Dean's List - April 20120
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            Dean's List - November 2019
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Top Ten
+                            <sup></sup>
+                             - Disrupt-IT Challenge 2018
                         </li>
-                        <li>
+                        <!--<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
@@ -215,7 +224,7 @@
                             3
                             <sup>rd</sup>
                             Place - James Buchanan High School - Hackathon 2005
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
             </section>
